--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -293,11 +293,13 @@ header {
      cursor: pointer;
      color: red;
      border-color: red;
+     background-color: black;
 }
  .connection-active {
      cursor: default;
      color: #faea01;
      border-color: #faea01;
+     background-color: black;
 }
 
 .market-active {
@@ -987,4 +989,8 @@ li{
     -webkit-box-shadow: 0px 5px 10px 2px rgba(250,234,1,0.5);
     box-shadow: 0px 5px 10px 2px rgba(250,234,1,0.5);
     margin-bottom: 25px;
+}
+
+.task-block{
+    cursor:default;
 }
